--- a/index.html
+++ b/index.html
@@ -4,36 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="styles.css">
-
-    <title>F1</title>
+    <title>Central de Recursos de Saúde Mental</title>
 </head>
 
 <body>
     <header>
-        <h1>Fórmula 1</h1>
+        <h1>Central de Recursos de Saúde Mental</h1>
     </header>
     <main>
-
         <section>
-
-            <input type="text" placeholder="Digite o nome do atleta">
-            <button onclick="pesquisar()">Pesquisar</button>
+            <input type="text" placeholder="Digite um tópico de saúde mental">
+            <button>Pesquisar</button>
         </section>
 
-        <section class="resultados-pesquisa" id="resultados-pesquisa">
-
+        <section class="resultados-pesquisa">
+            <!-- Exemplo de item de resultado -->
+            <div class="item-resultado">
+                <h2>
+                    <a href="#" target="_blank">Técnicas de Relaxamento</a>
+                </h2>
+                <p class="descricao-meta">Descubra técnicas eficazes para relaxar e reduzir o estresse, como meditação, respiração profunda e exercícios de mindfulness.</p>
+                <a href="https://exemplo.com/tecnicas-de-relaxamento" target="_blank">Mais informações</a>
+            </div>
+            
+            <!-- Outros itens de resultado -->
         </section>
-
     </main>
     <footer>
-        <p>2024 - Atletas do Brasil. Todos os direitos reservados</p>
-        <p>Emtre em contato pelo email: guilherme@atleta.com</p>
+        <p>2024 - Central de Recursos de Saúde Mental. Todos os direitos reservados</p>
+        <p>Entre em contato pelo email: guilherme@saudemental.com</p>
     </footer>
     <script src="./dados.js"></script>
     <script src="./app.js"></script>
-
 </body>
 
 </html>
